--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,30 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  /* transitions */
+  --first-menu-button-span: translateY(8px) rotate(45deg);
+  --second-menu-button-span: translateY(-8px) rotate(-45deg);
+  
+  /* colors */
+  --color-black-pearl: #050E1D;
+  --color-cod-gray: #1B1B1B;
+  --color-shark: #1D1F25;
+  --color-viking: #53C1DE;
+  --color-white: #FFFCF2;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  /* animations */
+  --animate-revealing: reveal 1s ease-in-out;
+  @keyframes reveal {
+    0% {
+      max-height: 0;
+    }
+    100% {
+      max-height: auto;
+    }
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
+  outline: none;
 }
